# research-data-explorer

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONSTITUTION.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-TW.md  SECURITY.md  SPEC.md  pyproject.toml
.clinerules/: 00-project.md  00-rde.md  10-python.md  20-vscode-extension.md  30-citation-ready.md  40-release.md
.github/: agent-control.yaml  copilot-instructions.md
docs/: handoff_2026-04-17_phase13_release_0.4.5.md  index.html  product-doctrine.md  rde_external_repo_learning_plan_20260512.md  rde_maintenance_20260512_kmu_spark_aki.md  vsix_multiplatform_audit_20260512.md
memory-bank/: activeContext.md  architect.md  decisionLog.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md
scripts/: analyze_aki.py  codex_rde_smoke.py  configure_codex_mcp.py  export_aki_report.py  pipeline_guard.py  preprocess_aki.py  visualize_aki.py
tests/: conftest.py  smoke_full.py  smoke_phase0_5.py  smoke_phase6_10.py  test_advanced_analysis_formatting.py  test_agent_control_manifest.py  test_analysis_delegation.py  test_artifact_encoding.py  test_autonomous_eda_benchmark.py  test_autonomous_eda_planner.py  test_codex_support.py  test_docs_and_tool_sync.py  test_exploration_branch_loop.py  test_heuristic_policy.py  test_numeric_plausibility.py  test_pipeline_enforcement.py  test_pipeline_guard_cli.py  test_pipeline_integration.py  test_plan_adherence.py  test_raw_data_normalization.py  test_release_consistency.py  test_report_contract.py  (+4 more)
(+177 files in other folders)
