[project]
name = "research-data-explorer"
version = "0.1.0"
description = "11-Phase Auditable EDA Pipeline — MCP Server"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pandas>=2.0",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "tableone>=0.9",
    "ydata-profiling>=4.6",
    "httpx>=0.24",
    "pyyaml>=6.0",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]
pdf = [
    "xhtml2pdf>=0.2.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rde"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
